; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/arm/extr_aaci.c_aaci_pcm_capture_prepare.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/arm/extr_aaci.c_aaci_pcm_capture_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { %struct.aaci*, %struct.snd_pcm_runtime* }
%struct.aaci = type { i32 }
%struct.snd_pcm_runtime = type { i32 }

@AC97_EXTENDED_STATUS = common dso_local global i32 0, align 4
@AC97_PCM_LR_ADC_RATE = common dso_local global i32 0, align 4
@AC97_PCM_MIC_ADC_RATE = common dso_local global i32 0, align 4
@AC97_REC_SEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @aaci_pcm_capture_prepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aaci_pcm_capture_prepare(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca %struct.snd_pcm_substream*, align 8
  %3 = alloca %struct.snd_pcm_runtime*, align 8
  %4 = alloca %struct.aaci*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %2, align 8
  %5 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %6 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %5, i32 0, i32 1
  %7 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %6, align 8
  store %struct.snd_pcm_runtime* %7, %struct.snd_pcm_runtime** %3, align 8
  %8 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %9 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %8, i32 0, i32 0
  %10 = load %struct.aaci*, %struct.aaci** %9, align 8
  store %struct.aaci* %10, %struct.aaci** %4, align 8
  %11 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %12 = call i32 @aaci_pcm_prepare(%struct.snd_pcm_substream* %11)
  %13 = load %struct.aaci*, %struct.aaci** %4, align 8
  %14 = getelementptr inbounds %struct.aaci, %struct.aaci* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @AC97_EXTENDED_STATUS, align 4
  %17 = call i32 @aaci_ac97_write(i32 %15, i32 %16, i32 1)
  %18 = load %struct.aaci*, %struct.aaci** %4, align 8
  %19 = getelementptr inbounds %struct.aaci, %struct.aaci* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @AC97_PCM_LR_ADC_RATE, align 4
  %22 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %3, align 8
  %23 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @aaci_ac97_write(i32 %20, i32 %21, i32 %24)
  %26 = load %struct.aaci*, %struct.aaci** %4, align 8
  %27 = getelementptr inbounds %struct.aaci, %struct.aaci* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @AC97_PCM_MIC_ADC_RATE, align 4
  %30 = load %struct.snd_pcm_runtime*, %struct.snd_pcm_runtime** %3, align 8
  %31 = getelementptr inbounds %struct.snd_pcm_runtime, %struct.snd_pcm_runtime* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @aaci_ac97_write(i32 %28, i32 %29, i32 %32)
  %34 = load %struct.aaci*, %struct.aaci** %4, align 8
  %35 = getelementptr inbounds %struct.aaci, %struct.aaci* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @AC97_REC_SEL, align 4
  %38 = call i32 @aaci_ac97_write(i32 %36, i32 %37, i32 1028)
  ret i32 0
}

declare dso_local i32 @aaci_pcm_prepare(%struct.snd_pcm_substream*) #1

declare dso_local i32 @aaci_ac97_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
